[gd_scene load_steps=45 format=2]

[ext_resource path="res://theme/main_menu.theme" type="Theme" id=1]
[ext_resource path="res://fonts/Lato-BlackItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/menu_principal_signs/sign_1/main_menu_sign_!.tres" type="Texture" id=3]
[ext_resource path="res://sprites/menu_principal_signs/sign_2/main_menu_sign_2.tres" type="Texture" id=4]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=5]
[ext_resource path="res://scripts/settings_menu.gd" type="Script" id=6]
[ext_resource path="res://audio/menu.wav" type="AudioStream" id=7]
[ext_resource path="res://fonts/Lato-Black.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://sprites/menu_principal_signs/sign_3/main_menu_sign_3.tres" type="Texture" id=9]
[ext_resource path="res://sprites/menu_principal/menu_principal_layer_7.png" type="Texture" id=10]
[ext_resource path="res://sprites/menu_principal/menu_principal_layer_5.png" type="Texture" id=11]
[ext_resource path="res://sprites/menu_principal/menu_principal_layer_1.png" type="Texture" id=12]
[ext_resource path="res://sprites/menu_principal/menu_principal_layer_4.png" type="Texture" id=13]
[ext_resource path="res://sprites/menu_principal/menu_principal_layer_2.png" type="Texture" id=14]
[ext_resource path="res://assets/shaders/fog.shader" type="Shader" id=15]
[ext_resource path="res://sprites/menu_principal/cosmogony.png" type="Texture" id=16]
[ext_resource path="res://sprites/menu_principal_signs/stick.png" type="Texture" id=17]
[ext_resource path="res://scenes/loading.tscn" type="PackedScene" id=18]

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0.0648148, 0.546296, 0.611111, 0.805556 )
colors = PoolColorArray( 0.415686, 0.415686, 0.415686, 0, 0.552941, 0.552941, 0.552941, 1, 0.788317, 0.788317, 0.788317, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=13]
gradient = SubResource( 12 )

[sub_resource type="OpenSimplexNoise" id=22]

[sub_resource type="NoiseTexture" id=23]
seamless = true
noise = SubResource( 22 )

[sub_resource type="ShaderMaterial" id=24]
shader = ExtResource( 15 )
shader_param/scroll1 = Vector2( 0.05, 0.05 )
shader_param/scroll2 = Vector2( 0.04, 0.04 )
shader_param/texture2 = SubResource( 23 )
shader_param/colorTexture = SubResource( 13 )

[sub_resource type="OpenSimplexNoise" id=25]

[sub_resource type="NoiseTexture" id=26]
seamless = true
noise = SubResource( 25 )

[sub_resource type="DynamicFont" id=10]
size = 35
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=11]
size = 35
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=27]
size = 35
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=28]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=16]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=19]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=20]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=21]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=29]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/TextureRect5:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.470588 ) ]
}

[sub_resource type="Animation" id=30]
resource_name = "flower_lights"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control/TextureRect5:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.470588 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SettingsMenu/MainMenuTwo/SettingsMenu:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1.4048, 0.0490365 ),
"update": 0,
"values": [ Vector2( -1920, 92 ), Vector2( 0, 92 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 1

[node name="Fog" type="TextureRect" parent="Control"]
material = SubResource( 24 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -358.0
margin_right = 43.0
margin_bottom = 404.0
texture = SubResource( 26 )
expand = true
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 1

[node name="TextureRect4" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 1

[node name="TextureRect5" type="TextureRect" parent="Control"]
modulate = Color( 1, 1, 1, 0.470588 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 1

[node name="TextureRect6" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -623.5
margin_top = -388.0
margin_right = 623.5
margin_bottom = -122.0
texture = ExtResource( 16 )
stretch_mode = 5

[node name="TextureRect7" type="TextureRect" parent="Control"]
margin_left = 273.0
margin_top = 446.726
margin_right = 367.0
margin_bottom = 1108.73
texture = ExtResource( 17 )
expand = true
stretch_mode = 1

[node name="Menu" type="VBoxContainer" parent="."]
anchor_top = 0.265
anchor_bottom = 0.265
margin_left = 131.0
margin_top = 221.8
margin_right = 816.0
margin_bottom = 1042.8
rect_min_size = Vector2( 400, 400 )
rect_scale = Vector2( 0.55461, 0.577209 )
custom_constants/separation = 25

[node name="Start" type="TextureButton" parent="Menu"]
margin_right = 685.0
margin_bottom = 253.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="Play" type="Label" parent="Menu/Start"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -129.386
margin_top = 51.0543
margin_right = -43.3857
margin_bottom = -142.946
rect_scale = Vector2( 2.05225, 2.05225 )
custom_fonts/font = SubResource( 10 )
text = "Jugar"
align = 1
valign = 1

[node name="Settings" type="TextureButton" parent="Menu"]
margin_top = 278.0
margin_right = 685.0
margin_bottom = 541.0
texture_normal = ExtResource( 4 )

[node name="Configuration" type="Label" parent="Menu/Settings"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -256.618
margin_top = 59.2681
margin_right = -32.618
margin_bottom = -145.732
rect_scale = Vector2( 2.14405, 2.14405 )
custom_fonts/font = SubResource( 11 )
text = "Configuración"
align = 1
valign = 1

[node name="Quit" type="TextureButton" parent="Menu"]
margin_top = 566.0
margin_right = 685.0
margin_bottom = 821.0
texture_normal = ExtResource( 9 )

[node name="Quit" type="Label" parent="Menu/Quit"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -117.614
margin_top = 66.7644
margin_right = -45.6144
margin_bottom = -133.236
rect_scale = Vector2( 2.08708, 2.08708 )
custom_fonts/font = SubResource( 27 )
text = "Salir"
align = 1
valign = 1

[node name="SettingsMenu" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.0352941, 0.0823529, 1 )

[node name="Label" type="Label" parent="SettingsMenu"]
anchor_right = 1.0
margin_top = 113.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 5 )
text = "Configuración"
align = 1
valign = 1

[node name="MainMenuTwo" type="VBoxContainer" parent="SettingsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -200.0
margin_right = 640.0
margin_bottom = 200.0
size_flags_horizontal = 5
custom_constants/separation = 25

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/MainMenuTwo"]
margin_right = 1280.0
margin_bottom = 47.0
custom_constants/separation = 25

[node name="Video" type="Button" parent="SettingsMenu/MainMenuTwo/HBoxContainer"]
margin_right = 410.0
margin_bottom = 47.0
focus_neighbour_left = NodePath("../Controls")
focus_neighbour_right = NodePath("../Audio")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "Video"

[node name="Audio" type="Button" parent="SettingsMenu/MainMenuTwo/HBoxContainer"]
margin_left = 435.0
margin_right = 845.0
margin_bottom = 47.0
focus_neighbour_left = NodePath("../Video")
focus_neighbour_right = NodePath("../Controls")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "Audio"

[node name="Controls" type="Button" parent="SettingsMenu/MainMenuTwo/HBoxContainer"]
margin_left = 870.0
margin_right = 1280.0
margin_bottom = 47.0
focus_neighbour_left = NodePath("../Audio")
focus_neighbour_right = NodePath("../Video")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Controles"

[node name="SettingsMenu" type="VBoxContainer" parent="SettingsMenu/MainMenuTwo"]
margin_left = -1920.0
margin_top = 92.0
margin_right = -640.0
margin_bottom = 511.0
script = ExtResource( 6 )

[node name="VideoSettings" type="GridContainer" parent="SettingsMenu/MainMenuTwo/SettingsMenu"]
margin_right = 1280.0
margin_bottom = 207.0
rect_min_size = Vector2( 640, 0 )
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2

[node name="Vsync" type="Label" parent="SettingsMenu/MainMenuTwo/SettingsMenu/VideoSettings"]
margin_top = 15.0
margin_right = 1074.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 28 )
text = "Vsync"

[node name="CheckButton" type="CheckButton" parent="SettingsMenu/MainMenuTwo/SettingsMenu/VideoSettings"]
margin_left = 1208.0
margin_right = 1280.0
margin_bottom = 67.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="FullScreen" type="Label" parent="SettingsMenu/MainMenuTwo/SettingsMenu/VideoSettings"]
margin_top = 96.0
margin_right = 1074.0
margin_bottom = 133.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 14 )
text = "Pantalla completa"

[node name="CheckBox" type="CheckBox" parent="SettingsMenu/MainMenuTwo/SettingsMenu/VideoSettings"]
margin_left = 1099.0
margin_top = 92.0
margin_right = 1280.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 15 )
pressed = true
text = "Off"
align = 2

[node name="Resolution" type="Label" parent="SettingsMenu/MainMenuTwo/SettingsMenu/VideoSettings"]
margin_top = 166.0
margin_right = 1074.0
margin_bottom = 203.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 16 )
text = "Resolución"

[node name="OptionButton" type="OptionButton" parent="SettingsMenu/MainMenuTwo/SettingsMenu/VideoSettings"]
margin_left = 1099.0
margin_top = 162.0
margin_right = 1280.0
margin_bottom = 207.0
size_flags_horizontal = 8
custom_fonts/font = SubResource( 17 )
text = "1920 * 1080"

[node name="AudioSettings" type="GridContainer" parent="SettingsMenu/MainMenuTwo/SettingsMenu"]
margin_top = 211.0
margin_right = 1280.0
margin_bottom = 348.0
rect_min_size = Vector2( 640, 0 )
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="SettingsMenu/MainMenuTwo/SettingsMenu/AudioSettings"]
margin_top = 15.0
margin_right = 1183.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 18 )
text = "Música"

[node name="CheckButton" type="CheckButton" parent="SettingsMenu/MainMenuTwo/SettingsMenu/AudioSettings"]
margin_left = 1208.0
margin_right = 1280.0
margin_bottom = 67.0
size_flags_horizontal = 8
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Label" parent="SettingsMenu/MainMenuTwo/SettingsMenu/AudioSettings"]
margin_top = 96.0
margin_right = 1183.0
margin_bottom = 133.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 19 )
text = "Sonido"

[node name="CheckBox" type="CheckBox" parent="SettingsMenu/MainMenuTwo/SettingsMenu/AudioSettings"]
margin_left = 1212.0
margin_top = 92.0
margin_right = 1280.0
margin_bottom = 137.0
size_flags_horizontal = 8
custom_fonts/font = SubResource( 20 )
text = "Off"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsSettings" type="GridContainer" parent="SettingsMenu/MainMenuTwo/SettingsMenu"]
margin_top = 352.0
margin_right = 1280.0
margin_bottom = 419.0
rect_min_size = Vector2( 640, 0 )
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="SettingsMenu/MainMenuTwo/SettingsMenu/ControlsSettings"]
margin_top = 15.0
margin_right = 1183.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 21 )
text = "Controles"

[node name="CheckButton" type="CheckButton" parent="SettingsMenu/MainMenuTwo/SettingsMenu/ControlsSettings"]
margin_left = 1208.0
margin_right = 1280.0
margin_bottom = 67.0
size_flags_horizontal = 8
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "flower_lights"
anims/RESET = SubResource( 29 )
anims/flower_lights = SubResource( 30 )
anims/settings = SubResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="Loading" parent="." instance=ExtResource( 18 )]
visible = false

[connection signal="pressed" from="Menu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="SettingsMenu/MainMenuTwo/HBoxContainer/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="SettingsMenu/MainMenuTwo/HBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="SettingsMenu/MainMenuTwo/HBoxContainer/Controls" to="." method="_on_Controls_pressed"]
